[project]
name = "gaba"
version = "0.1.0"
description = "Mechanistic interpretability tool for analyzing suppression and alignment behavior in transformer models"
authors = [{ name="Christian Hardy", email="christianth.to@gmail.com" }]
requires-python = ">=3.9"

dependencies = [
    "opencv-python",
    "transformers>=4.31.0",
    "datasets",
    "sentencepiece",
    "fancy_einsum",
    "einops",
    "jaxtyping",
    "better_abc",
    "transformer-lens",
    "transformers_stream_generator",
    "kaleido",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
